...
                    .foregroundStyle(Color.mainYellow)
                    .textContentType(.none)
                    .focused($isKeyboardActive)
                    .onChange(of: viewModel.productName) { _, _ in
                        viewModel.resetValidationColorIfNeeded()
                    }
                    .accessibilityIdentifier("certificate_name_textfield")
            }
            
            VStack(alignment: .leading, spacing: 12) {
                HStack(spacing: 10) {
                    Image(systemName: "calendar")
                        .resizable()
...
                        .frame(height: 50)
                        .frame(maxWidth: .infinity)
                        .foregroundStyle(.mainDarkBlue)
                        .background(.mainYellow)
                        .clipShape(Capsule())
                }
                .accessibilityIdentifier("save_certificate_button")
            }
            .frame(maxWidth: .infinity)
            
            Spacer()
        }
        .padding([.top, .horizontal], 20)
...
